tests/cases/smoke/invalid/class_conformance_private_method.dp
record Animal {
    speak: () -> none
}

class Fish is Animal {
    func speak() -> none {
        print("x")
    }
}
